<resources>
    <string name="app_name">Quiz</string>
    <string name="enter_user_name">Enter your name</string>
    <string name="Go_button_name">start</string>
    <string name="quiz">Quiz</string>
    <string name="question_1">Bob’\s father has 4 children. Momo, Meme, and Mumu are three of them. Who’\s the fourth?</string>
    <string name="_1">1.</string>
    <string name="question_2">I have three apples. If you take away two from me, how many do you have?</string>
    <string name="_2">2.</string>
    <string name="enter_your_answer">Enter your answer</string>
    <string name="question_3">Which letter of the English alphabet flies, sings, and stings?</string>
    <string name="_3">3.</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="question_4">Which one is correct?</string>
    <string name="_4">4.</string>
    <string name="option1_of_4Q_">Penguins flies</string>
    <string name="option2_of_4Q">A Penguin flies</string>
    <string name="option3_of_4Q">Neither</string>
    <string name="question_5">What can you never eat for breakfast?</string>
    <string name="_5">5.</string>
    <string name="option1_of_Q5">Dinner</string>
    <string name="option2_of_Q5">lunch</string>
    <string name="option3_of_Q5">supper</string>
    <string name="option4_of_Q5">snacks</string>
    <string name="question_6">What is Johnny Depp afraid of?</string>
    <string name="_6">6.</string>
    <string name="option1_of_Q6">clowns</string>
    <string name="option2_of_Q6">sharks</string>
    <string name="option3_of_Q6">hunter</string>
    <string name="option4_of_Q6">jokers</string>
    <string name="submit">submit</string>
    <string name="note">please check your answers before submitting</string>
    <string name="won">Yay You Won!</string>
    <string name="lose">Oops You Lose!</string>
    <string name="incorrect">incorrect</string>
    <string name="correct">correct</string>
    <string name="answer_of_q1">bob</string>
    <string name="answer_type1_ofq2">2</string>
    <string name="answer_type2_of_q2">two</string>
</resources>
