<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/card_color">

    <android.support.design.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/questions_card_margin"
        android:foreground="?attr/selectableItemBackground"
        android:foregroundGravity="center"
        app:cardBackgroundColor="@color/background_color"
        app:cardCornerRadius="@dimen/questions_card_radius"
        app:cardElevation="@dimen/question_card_elevation"

        >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/questions_layout_margin"
            tools:context=".QuizActivity">

            <TextView
                android:id="@+id/number_1"
                style="@style/number_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:fontFamily="@font/merienda"
                android:text="@string/_1"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/questionNumber1"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/questionNumber1"
                style="@style/questionStyle"

                android:text="@string/question_1"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayoutForBlank_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutForBlank_1"
                style="@style/blanksStyle"
                android:layout_marginTop="@dimen/blank1_margin_top"
                app:layout_constraintEnd_toEndOf="@+id/questionNumber1"
                app:layout_constraintTop_toBottomOf="@+id/number_1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/blank_1_of_question1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/merienda"
                    android:hint="@string/enter_your_answer"
                    android:inputType="textCapWords"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/questionNumber2"
                style="@style/questionStyle"
                android:text="@string/question_2"
                app:layout_constraintStart_toStartOf="@+id/questionNumber1"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutForBlank_1" />

            <TextView
                android:id="@+id/number_2"
                style="@style/number_question"
                android:text="@string/_2"
                app:layout_constraintStart_toStartOf="@+id/number_1"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutForBlank_1" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutForBlank2"
                style="@style/blanksStyle"
                app:layout_constraintEnd_toEndOf="@+id/questionNumber2"
                app:layout_constraintTop_toBottomOf="@+id/questionNumber2">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/blank_2_of_question2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/merienda"
                    android:hint="@string/enter_your_answer"
                    android:inputType="textCapWords"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/questionNumber3"
                style="@style/questionStyle"
                android:text="@string/question_3"
                app:layout_constraintStart_toStartOf="@+id/questionNumber2"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutForBlank2" />

            <TextView
                android:id="@+id/number_3"
                style="@style/number_question"
                android:text="@string/_3"
                app:layout_constraintStart_toStartOf="@+id/number_2"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutForBlank2" />

            <RadioGroup
                android:id="@+id/radioGroupForQuestion3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/answers3_margin_top"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@+id/questionNumber3"
                app:layout_constraintTop_toBottomOf="@+id/questionNumber3">

                <RadioButton
                    android:id="@+id/a_option_of_question3"
                    style="@style/options_style"
                    android:text="@string/a" />

                <RadioButton

                    android:id="@+id/b_option_of_question3"
                    style="@style/options_style"
                    android:text="@string/b" />

                <RadioButton
                    android:id="@+id/c_option_of_question3"
                    style="@style/options_style"
                    android:text="@string/c" />
            </RadioGroup>

            <TextView
                android:id="@+id/questionNumber4"
                style="@style/questionStyle"
                android:text="@string/question_4"
                app:layout_constraintStart_toStartOf="@+id/questionNumber3"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupForQuestion3" />

            <TextView
                android:id="@+id/number_4"
                style="@style/number_question"
                android:text="@string/_4"
                app:layout_constraintStart_toStartOf="@+id/number_3"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupForQuestion3" />

            <RadioGroup
                android:id="@+id/radioGroupForQuestion4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/answers4_margin_top"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@+id/questionNumber4"
                app:layout_constraintTop_toBottomOf="@+id/questionNumber4">

                <RadioButton
                    android:id="@+id/penguinsFiles_option_Question4"
                    style="@style/options_style"
                    android:text="@string/option1_of_4Q_" />

                <RadioButton
                    android:id="@+id/aPenguinsFiles_option_Question4"
                    style="@style/options_style"
                    android:text="@string/option2_of_4Q" />

                <RadioButton
                    android:id="@+id/niether_option_question4"
                    style="@style/options_style"
                    android:text="@string/option3_of_4Q" />
            </RadioGroup>


            <TextView
                android:id="@+id/questionNumber5"
                style="@style/questionStyle"
                android:text="@string/question_5"
                app:layout_constraintStart_toStartOf="@+id/questionNumber4"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupForQuestion4" />

            <TextView
                android:id="@+id/number_5"
                style="@style/number_question"
                android:text="@string/_5"
                app:layout_constraintStart_toStartOf="@+id/number_4"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupForQuestion4" />

            <CheckBox
                android:id="@+id/dinner_option"
                style="@style/options_style"
                android:layout_marginStart="@dimen/checkbox_startOrEnd_margin"
                android:layout_marginTop="@dimen/checkbox_startOrEnd_margin"
                android:text="@string/option1_of_Q5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/questionNumber5" />

            <CheckBox
                android:id="@+id/supper_option"
                style="@style/options_style"
                android:layout_marginStart="@dimen/checkbox_startOrEnd_margin"
                android:text="@string/option3_of_Q5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lunch_option" />

            <CheckBox
                android:id="@+id/lunch_option"
                style="@style/options_style"
                android:layout_marginStart="@dimen/checkbox_startOrEnd_margin"
                android:text="@string/option2_of_Q5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dinner_option" />

            <CheckBox
                android:id="@+id/snacks_option"
                style="@style/options_style"

                android:layout_marginStart="@dimen/checkbox_startOrEnd_margin"

                android:text="@string/option4_of_Q5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/supper_option" />

            <TextView
                android:id="@+id/questionNumber6"
                style="@style/questionStyle"
                android:text="@string/question_6"
                app:layout_constraintStart_toStartOf="@+id/questionNumber5"
                app:layout_constraintTop_toBottomOf="@+id/snacks_option" />

            <TextView
                android:id="@+id/number_6"
                style="@style/number_question"
                android:text="@string/_6"
                app:layout_constraintStart_toStartOf="@+id/number_5"
                app:layout_constraintTop_toBottomOf="@+id/snacks_option" />

            <CheckBox
                android:id="@+id/clown_option"
                style="@style/options_style"
                android:layout_marginStart="@dimen/checkbox_startOrEnd_margin"
                android:layout_marginTop="@dimen/checkbox_startOrEnd_margin"
                android:text="@string/option1_of_Q6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/questionNumber6" />

            <CheckBox
                android:id="@+id/sharks_option"
                style="@style/options_style"
                android:layout_marginStart="@dimen/checkbox_startOrEnd_margin"
                android:text="@string/option2_of_Q6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clown_option" />

            <CheckBox
                android:id="@+id/hunter_option"
                style="@style/options_style"
                android:layout_marginStart="@dimen/checkbox_startOrEnd_margin"
                android:text="@string/option3_of_Q6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sharks_option" />

            <CheckBox
                android:id="@+id/joker_option"
                style="@style/options_style"
                android:layout_marginStart="@dimen/checkbox_startOrEnd_margin"
                android:text="@string/option4_of_Q6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hunter_option" />


            <TextView
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/note_margin"
                android:fontFamily="@font/merienda"
                android:text="@string/note"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/joker_option" />

            <android.support.design.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button"
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/submit_startOrEnd_margin"
                android:layout_marginStart="@dimen/submit_startOrEnd_margin"
                android:layout_marginTop="@dimen/submit_margin_top"
                android:fontFamily="@font/merienda"
                android:onClick="goToResultsActivity"
                android:text="@string/submit"
                app:cornerRadius="@dimen/submit_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/note" />


        </android.support.constraint.ConstraintLayout>

    </android.support.design.card.MaterialCardView>
</ScrollView>